--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "cypress": "^5.0.0"
+  },
+  "devDependencies": {
+    "@bahmutov/cy-api": "^1.4.2"
   }
 }
